--- a/src/main/java/speciesClasssification/View/MainView.form
+++ b/src/main/java/speciesClasssification/View/MainView.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="speciesClasssification.MainView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="speciesClasssification.View.MainView">
   <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="true" same-size-vertically="true" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
